--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://pontem-network.github.io/pontem-wallet-demo",
   "dependencies": {
     "@aptos-labs/wallet-adapter-react": "^0.1.7",
+    "@craco/craco": "^7.0.0",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@manahippo/aptos-wallet-adapter": "^1.0.5",
@@ -20,9 +21,9 @@
     "aptos": "^1.3.7",
     "craco-webpack-resolve": "^1.2.1",
     "crypto-browserify": "^3.12.0",
-    "petra-plugin-wallet-adapter": "^0.1.2",
     "eslint": "8.22.0",
     "eslint-config-airbnb": "^19.0.4",
+    "petra-plugin-wallet-adapter": "^0.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
@@ -30,8 +31,7 @@
     "sass": "^1.54.5",
     "stream-browserify": "^3.0.0",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4",
-    "@craco/craco": "^7.0.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "craco start",
